# aws-cost-explore-lambda

./: .gitignore  README.md  pyproject.toml
sam/: samconfig.toml  template.yaml
sam/app/: app.py
tests/: test_cost_report.py  test_lambda_handler.py
